--- a/themes/default/templates/documents/document_edit.html
+++ b/themes/default/templates/documents/document_edit.html
@@ -4,24 +4,22 @@
 {% load details %}
 
 {% block meta_title %}
-{% with model=object.content_type.name %}
+{% model_name object.content_type.model as model %}
 {% if object.pk %}
 {% blocktrans %}Edit {{ model }}{% endblocktrans %}
 {% else %}
 {% blocktrans %}Add {{ model }}{% endblocktrans %}
 {% endif %}
-{% endwith %}
 {% endblock %}
 
 {% block title %}
 <div class="title">
-    {% with model=object.content_type.name %}
+    {% model_name object.content_type.model_class as model %}
     {% if object.pk %}
     <h1>{{ object|striptags|capfirst }}</h1>
     <h2>{% blocktrans %}Edit {{ model }}{% endblocktrans %}</h2>
     {% else %}
     <h1>{% blocktrans %}Add {{ model }}{% endblocktrans %}</h1>
     {% endif %}
-    {% endwith %}
 </div>
 {% endblock %}
