--- a/settings/base.py.tmpl
+++ b/settings/base.py.tmpl
@@ -94,7 +94,7 @@ MEDIA_URL = '/files/'
 # Don't put anything in this directory yourself; store your static files
 # in apps' "static/" subdirectories and in STATICFILES_DIRS.
 # Example: "/home/media/media.lawrence.com/static/"
-STATIC_ROOT = THEME_PATH + '/static/'
+STATIC_ROOT = PROJECT_PATH + '/static/'
 
 # URL prefix for static files.
 # Example: "http://media.lawrence.com/static/"
@@ -110,6 +110,7 @@ STATICFILES_DIRS = (
     # Put strings here, like "/home/html/static" or "C:/www/django/static".
     # Always use forward slashes, even on Windows.
     # Don't forget to use absolute paths, not relative paths.
+    THEME_PATH + '/static/',
 )
 
 # List of finder classes that know how to find static files in
