--- a/themes/default/templates/base.html
+++ b/themes/default/templates/base.html
@@ -20,7 +20,9 @@
     
     <link rel="stylesheet" href="{{ STATIC_URL }}css/style.css" type="text/css" media="all"/>
 
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/mobile.css" type="text/css" media="handheld"/>
+    <link media="handheld, only screen and (max-device-width: 320px)" href="{{ STATIC_URL }}css/mobile.css" type="text/css" rel="stylesheet" />
+    <link media="only screen and (-webkit-min-device-pixel-ratio: 2)" href="{{ STATIC_URL }}css/mobile.css" type="text/css" rel="stylesheet" />
+    <link media="only screen and (max-device-width: 480px)" href="{{ STATIC_URL }}css/mobile.css" type="text/css" rel="stylesheet" />
 
     {% block extrahead %}
     {% if form %}
